--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=Wathis_outils-gftm
 sonar.projectName="outils-gftm"
 sonar.projectVersion="0.0.1-SNAPSHOT"
-sonar.sources=.
+sonar.sources=src
