--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,6 @@
 sonar.projectKey=Wathis_outils-gftm
 sonar.projectName="outils-gftm"
 sonar.projectVersion="0.0.1-SNAPSHOT"
-sonar.sources=src
+sonar.sources=src/main/java/
+sonar.language=java
+sonar.java.binaries=**/target/classes
