--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: java
-before_install:
-  - mvn package
 addons:
   sonarcloud:
     organization: "wathis-github"
     token:
       secure: "0976e4c28853c12f2368054ce60866ed49a8ac7a"
 script:
-  - sonar-scanner
+- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
